# Brainstorm

./: .clang-format  .clang-tidy  .gitignore  .luacheckrc  AGENTS.md  BUILD_INSTRUCTIONS.md  BalatroSource_Guide.md  Brainstorm.lua  CHANGELOG.md  CLAUDE.md  COMPLETE_FAILURE_ANALYSIS_FOR_DE.md  CRITICAL_CUDA_ILLEGAL_ADDRESS.md  CUDA_FIX_SUMMARY.md  DEVELOPMENT_GUIDE.md  DE_CRITICAL_DRIVER_CORRUPTION.md  ENGINEERING_REVIEW.md  FINAL_GA_REPORT_FOR_DE.md  FIXES_APPLIED.md  GA_FINAL_RELEASE_REPORT.md  GA_FINAL_SIGNOFF.md  GA_RELEASE_CHECKLIST.md  GA_VALIDATION_REPORT.md  GPU_ACCELERATION.md  GPU_DEPLOYMENT.md  HELP_REQUEST_DE.md  IMMOLATE_PERFORMANCE.md  IMMOLATE_SPEC.md  INSTALLATION.md  INSTALL_FOR_GAME.md  INTEGRATION_IDEAS.md  Makefile  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RUST_OVERHAUL.md  SETUP.md  SUMMARY.md  SourceReferenceDoc.MD  UI.lua  URGENT_CUDA_BROKEN.md  (+80 more)
.github/workflows/: dev-release.yml  release.yml
Core/: Brainstorm.lua  BrainstormPoolUpdate.lua  Brainstorm_enhanced.lua  Brainstorm_fix.lua  delayed_rng_test.lua  immolate_integration.lua  logger.lua  logging_integration.lua  logging_update.lua  manual_capture.lua  rng_logger.lua  rng_trace.lua  simple_rng_test.lua
Immolate/: BENCH.md  Cargo.toml  brainstorm.cpp  immolate.hpp
Immolate/CPP/: immolate.hpp
Immolate/Rust/: BENCH.md  Cargo.toml  PLAN.md
Immolate/Rust/src/: bench_cases.rs  ffi.rs  filters.rs  instance.rs  item.rs  lib.rs  seed.rs
Immolate/Rust/src/engine/: kernels.rs  rng.rs  search.rs  tables.rs
Immolate/Rust/src/v2/: config.rs  kernels.rs  mod.rs  search.rs  seed.rs
Immolate/Rust/src/v3/: config.rs  kernels.rs  mod.rs  search.rs  seed.rs
Immolate/src/: lib.rs  search.rs
Immolate/src/engine/: config.rs
ImmolateCPP/: .gitignore  CMakeLists.txt  CMakeLists_Brainstorm.txt  GPU_DEBUG_README.md  README.md  build.sh  build_cpu.sh  build_debug.sh  build_driver.sh  build_gpu.sh  build_safe.sh  build_simple.sh  build_test_harness.sh  build_worker.sh  deploy.sh  differential_runner.cpp  seed_filter.ptx  test_determinism.cpp  test_pack_semantics.cpp  test_parity.cpp  test_tag_contexts.cpp  test_tdr_soak.cpp
ImmolateCPP/src/: balatro_rng.hpp  brainstorm.cpp  brainstorm_cpu.cpp  brainstorm_driver.cpp  brainstorm_enhanced.cpp  brainstorm_safe.cpp  brainstorm_unified.cpp  choosers.hpp  cpu_fallback_balatro.cpp  debug.hpp  determinism_test.hpp  diagnostics.hpp  functions.cpp  functions.hpp  gpu_worker.cpp  immolate.cpp  immolate.hpp  immolate.txt  instance.hpp  items.hpp  main.cpp  pack_definitions.hpp  pool_hash.hpp  pool_manager.cpp  pools_api.hpp  repro_bundle.cpp  search.hpp  seed.cpp  seed.hpp  util.cpp  util.hpp
ImmolateCPP/src/gpu/: cuda_driver_loader.h  cuda_wrapper.hpp  cuda_wrapper.hpp.backup  gpu_kernel_driver.cpp  gpu_kernel_driver_debug.cpp  gpu_kernel_driver_prod.cpp  gpu_searcher.cpp  gpu_searcher.hpp  gpu_searcher_dynamic.cpp  gpu_searcher_kernel.cpp  gpu_types.h  gpu_worker_client.cpp  kernel_launcher.cpp  pool_types.h  probe_kernel.cu  safe_cuda_wrapper.hpp  seed_conversion.hpp  seed_filter.cu  seed_filter_kernel_balatro.cu  seed_filter_ptx.h  test_cuda.cpp
ImmolateCPP/src/gpu_experimental/: brainstorm_cuda.cpp  brainstorm_driver.cpp
ImmolateCPP/src/gpu_experimental/gpu/: gpu_kernel_driver.cpp  gpu_searcher.cpp  gpu_searcher.hpp  gpu_searcher_dynamic.cpp  gpu_searcher_kernel.cpp  gpu_types.h  gpu_worker_client.cpp  seed_filter_kernel.cu
ImmolateCPP/src/tests/: CMakeLists.txt  test_critical_functions.cpp  test_memory_safety.cpp
ImmolateCPP/tests/: cuda_drv_probe.cpp
ImmolateSourceCode/filters/: erratic_brainstorm.cl  erratic_deck_enhanced.cl
ImmolateSourceCode/lib/: erratic_support.cl
Rust/: Cargo.toml  PLAN.md
Rust/src/: ffi.rs  filters.rs  lib.rs  search.rs
UI/: ui.lua
scripts/dev/: profile_gpu.sh  quick_test.sh
scripts/test/: run_all_tests.sh  test_erratic.sh  test_gpu.bat  test_gpu.sh
test_data/: test_pools.json
tests/: TEST_DOCUMENTATION.md  cpu_smoke.lua  lua_smoke.lua  test_erratic_deck.lua  test_save_states.lua
